removed *some* avocode logos

--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
     <div class="header">
       <div class="navbar w-nav" data-animation="over-right" data-collapse="all" data-doc-height="1" data-duration="250" data-easing="ease-out" data-easing2="ease-in-out" data-ix="navbar" data-no-scroll="1">
         <div class="bar w-container" id="header">
-          <a class="brand-link w-nav-brand" href="{{ HOST_URL }}/" ><img alt="Avocode" class="logo" src="/static/images/avocode/logo/logo-dark.svg" width="115">
-          </a>
+
           <div class="leftmenu" data-ix="navbar">
             <div class="top-social-link">
               <div class="tweet-embed w-embed w-script"><a href="http://twitcount.com/btn" class="twitcount-button" data-count="horizontal" data-size="" data-url="http://bit.ly/2jn4jbn" data-text="Check out #nachosuikit for #ReactNative with 30+ pre-coded components by @avocode " data-related="" data-hashtag="" data-via="avocode">TwitCount Button</a>
@@ -112,9 +111,9 @@
               </a>
             </div>
             <div class="top-social-link">
-              <div class="github w-embed"><a class="github-button" href="https://github.com/avocode/nachos-ui" data-icon="octicon-star" data-count-href="/avocode/nachos-ui/stargazers" data-count-api="/repos/avocode/nachos-ui#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star avocode/nachos-ui on GitHub">Star</a>
+              <div class="github w-embed"><a class="github-button" href="https://github.com/nachos-ui/nachos-ui" data-icon="octicon-star" data-count-href="/nachos-ui/nachos-ui/stargazers" data-count-api="/repos/nachos-ui/nachos-ui#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star nachos-ui/nachos-ui on GitHub">Star</a>
               </div>
-            </div><a class="modal-link navbar-link signupbtn w-hidden-small w-hidden-tiny" data-ix="hover-down" href="/nachos-ui/docs/" id="topbar-button" target="_blank">documentation</a>
+            </div><a class="modal-link navbar-link signupbtn w-hidden-small w-hidden-tiny" data-ix="hover-down" href="https://docs.nachosui.com" id="topbar-button" target="_blank">documentation</a>
           </div>
         </div>
       </div>
@@ -125,7 +124,7 @@
           <div class="green">Introducing</div>
           <h1 class="h1">NACHOS <br>
 UI KIT FOR REACT NATIVE</h1>
-          <p class="text-1">Pick from a bunch of pre-coded UI components ready for your next kick-ass app in JavaScript or React.</p><a class="button-1 intro intros modal-link w-button" data-ix="hover-down" href="#get-started" id="header-button" target="_blank">GET STARTED</a>
+          <p class="text-1">Pick from a bunch of pre-coded UI components ready for your next killer app in JavaScript or React.</p><a class="button-1 intro intros modal-link w-button" data-ix="hover-down" href="#get-started" id="header-button" target="_blank">GET STARTED</a>
         </div>
         <div class="absolute flex-2 w-hidden-small w-hidden-tiny"><img class="nachos-kit" src="images/nachos-ui-kit2x.png" width="536">
         </div>
@@ -184,54 +183,6 @@ UI KIT FOR REACT NATIVE</h1>
             <div class="text-2">OPEN SOURCE for react native</div>
             <h2 class="h2">Contribute to nachos UI kit</h2>
             <p class="react-element text-4">We have created this UI kit to <a href="https://medium.com/avocode-stories/my-experience-of-building-nachos-ui-kit-for-react-native-c8307500b8a4#.xh66kequx" target="_blank">scratch our own itch</a>. Nachos UI is a community driven project. If you found a bug or would like to add a new component, please go ahead and contribute.</p><a class="button-1 intro modal-link w-button" data-ix="hover-down" href="https://github.com/avocode/nachos-ui/blob/master/CONTRIBUTING.md" id="header-button" target="_blank">Contribute</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="blue-section">
-      <div class="blue-block w-container">
-        <div class="paddingos">
-          <h3 class="h3">This React Native UI kit was coded with Avocode</h3>
-          <div class="blue-text-down">
-            <a href="https://github.com/avocode?utm_source=react-native-ui-kit&amp;utm_medium=web&amp;utm_campaign=react-native-ui-kit" class="link-blue without" target="_blank"></a>Avocode is a fully-featured tool to share, hand-off and inspect Photoshop and Sketch designs.
-            <a class="link-blue" target="_blank" href="{{ HOST_URL }}/?utm_source=react-native-ui-kit&amp;utm_medium=web&amp;utm_campaign=react-native-ui-kit"></a>
-          </div><a class="button w-button" data-ix="hover-down" href="{{ HOST_URL }}" target="_blank">Learn more</a>
-        </div>
-      </div><img class="footer__image" src="images/screen.jpg" width="597.5">
-    </div>
-    <div class="modal-background-2" id="exit-modal-2">
-      <div class="exit-window modal-window modal-window-2">
-        <div class="exit-modal-white w-clearfix">
-          <div class="close-exit-modal"><img class="closex" data-ix="close-2" src="images/close.png" width="18">
-          </div>
-          <div class="block-shirt w-clearfix w-hidden-small w-hidden-tiny"><img alt="t-shirt" class="t-shirt" src="images/tshirt.png" width="341">
-          </div>
-          <div class="form-block">
-            <div class="form-tshirt-wrapper w-form">
-              <form class="form-tshirt" data-name="Email Form Tweet" id="wf-form-Email-Form-Tweet" name="wf-form-Email-Form-Tweet">
-                <div class="intro-text">ONLY 20 T-SHIRTS LEFT</div>
-                <h2 class="h2-exit">WIN a free T-shirt!</h2>
-                <div class="filip-block"><img alt="Filip Gres" class="filip" src="images/me-02.png" width="54">
-                  <div class="filip-text">designed by Filip Gres</div>
-                </div>
-                <div class="text-block">Tweet about <a class="link-modal">#nachosuikit</a> and enter
-                  <br>the competition for an <a href="#" class="link-modal">#avocodetshirt</a>.</div>
-                <input class="button-1 modal-button tweet-button w-button" data-wait="Please wait..." id="twitter" type="submit" value="TWEET TO WIN">
-              </form>
-              <div class="success-tweet success-win w-form-done">
-                <h2 class="h2-exit h2-success">Thank you!</h2>
-                <div class="text-block text-success">On 20th of February, 2017 we will draw from all tweets with #nachos-ui-kit hashtag and choose 20 winners. We'll tweet you&nbsp;if you're among the lucky ones.
-                  <br>
-                  <br>In the meantime have a look at some open source we created for React.js
-                  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <span class="blue-success li-success"><a href="https://blog.avocode.com/blog/fix-messy-react-shortcuts-once-and-for-all" target="_blank" class="link-modal">React Shortcuts</a></span>
-                  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <span class="blue-success li-success"><a href="https://blog.avocode.com/blog/finally-a-simple-and-universal-router-for-reactjs" target="_blank" class="link-modal">React Universal Router</a></span>
-                  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <span class="blue-success li-success"><a href="https://blog.avocode.com/blog/limit-tabbing-with-react-tabguard" target="_blank" class="link-modal">React Tab Guard</a></span>
-                </div>
-              </div>
-              <div class="error-win w-form-fail">
-                <div class="error text-field">Oops! Something went wrong while submitting the form.</div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
